--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<div class="card-columns">
+    <div class="card" *ngFor="let song of newSongs">
+        <img [src]="song.images[0].url" class="card-img-top" alt="..." />
+        <div class="card-body">
+            <h5 class="card-title">{{ song.name }}</h5>
+            <p class="card-text">
+                <span
+                    *ngFor="let artist of song.artists"
+                    class="badge badge-pill badge-dark p-2"
+                >
+                    {{ artist.name }}</span
+                >
+            </p>
+        </div>
+    </div>
+</div>
