--- a/src/app/views/singer/singer.component.html
+++ b/src/app/views/singer/singer.component.html
@@ -1,1 +1,60 @@
-<p>singer works!</p>
+<app-loading *ngIf="loading"></app-loading>
+
+<div class="row" *ngIf="!loading">
+    <div class="col-2">
+        <img [src]="singer.images | noimage" class="img-thumbnail img-circle" />
+    </div>
+    <div class="col">
+        <h3>{{ singer.name }}</h3>
+        <p>
+            <a [href]="singer['external_urls'].spotify" target="_blank"
+                >Go to Artist page</a
+            >
+        </p>
+    </div>
+    <div class="col-4 text-right">
+        <button routerLink="/home" class="btn btn-outline-info">Back</button>
+    </div>
+</div>
+
+<div class="row mt-4">
+    <div class="col">
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th>Photo</th>
+                    <th>Album</th>
+                    <th>Song</th>
+                    <th>Preview</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let tracks of topTracks">
+                    <td>
+                        <img
+                            [src]="tracks['album'].images | noimage"
+                            class="img-thumb"
+                        />
+                    </td>
+                    <td>{{ tracks["album"].name }}</td>
+                    <td>{{ tracks.name }}</td>
+                    <td>
+                        <iframe
+                            [src]="
+                                tracks.uri
+                                    | domseguro
+                                        : 'https://open.spotify.com/embed?uri='
+                            "
+                            width="300"
+                            height="80"
+                            frameborder="0"
+                            allowtransparency="true"
+                            allow="encrypted-media"
+                        ></iframe>
+                        <!-- <audio [src]="tracks.preview_url" controls></audio> -->
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
